// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`图片渲染测试 图片单独在一个段落中 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一段
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <div
        class="container"
      >
        <div
          class="image-wrapper"
          data-testid="mdbox_image"
          style="width: 100%; height: 0px; max-width: 400px;"
        >
          <span
            style="display: inline-block;"
          >
            <img
              alt="image"
              class="image"
              decoding="async"
              height="256"
              imagex-type="react"
              imagex-version="0.3.7"
              loading="lazy"
              src="http://bytedance.com/logo.png"
              style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
              width="400"
            />
          </span>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第二段
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 图片在一个段落中被文字包含 上下都有文本 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一行
      <br
        class="container wrapper non-select"
      />
      <div
        class="container"
      >
        <div
          class="image-wrapper"
          data-testid="mdbox_image"
          style="width: 100%; height: 0px; max-width: 400px;"
        >
          <span
            style="display: inline-block;"
          >
            <img
              alt="image"
              class="image"
              decoding="async"
              height="256"
              imagex-type="react"
              imagex-version="0.3.7"
              loading="lazy"
              src="http://bytedance.com/logo.png"
              style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
              width="400"
            />
          </span>
        </div>
      </div>
      <br
        class="container wrapper non-select"
      />
      第二行
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 图片在一个段落中被文字包含 上面有文本 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一行
      <br
        class="container wrapper non-select"
      />
      <div
        class="container"
      >
        <div
          class="image-wrapper"
          data-testid="mdbox_image"
          style="width: 100%; height: 0px; max-width: 400px;"
        >
          <span
            style="display: inline-block;"
          >
            <img
              alt="image"
              class="image"
              decoding="async"
              height="256"
              imagex-type="react"
              imagex-version="0.3.7"
              loading="lazy"
              src="http://bytedance.com/logo.png"
              style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
              width="400"
            />
          </span>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 图片在一个段落中被文字包含 下面有文本 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <div
        class="container"
      >
        <div
          class="image-wrapper"
          data-testid="mdbox_image"
          style="width: 100%; height: 0px; max-width: 400px;"
        >
          <span
            style="display: inline-block;"
          >
            <img
              alt="image"
              class="image"
              decoding="async"
              height="256"
              imagex-type="react"
              imagex-version="0.3.7"
              loading="lazy"
              src="http://bytedance.com/logo.png"
              style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
              width="400"
            />
          </span>
        </div>
      </div>
      <br
        class="container wrapper non-select"
      />
      第二行
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 图片开启自适应宽度，同时指定宽高或不指定宽高时，宽高自适应 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="container"
      style="margin-bottom: 12px;"
    >
      <div
        class="image-wrapper"
        data-testid="mdbox_image"
        style="width: 100%; height: 0px; max-width: 46.666666666666664px;"
      >
        <span
          style="display: inline-block;"
        >
          <img
            alt="image"
            class="image"
            decoding="async"
            height="70"
            imagex-type="react"
            imagex-version="0.3.7"
            loading="lazy"
            src="http://bytedance.com/logo.png"
            style="border-radius: 12px; overflow: hidden; background-position: center;"
            width="46.666666666666664"
          />
        </span>
      </div>
    </div>
    


    <div
      class="container"
      style="margin-top: 12px; margin-bottom: 12px;"
    >
      <div
        class="image-wrapper"
        data-testid="mdbox_image"
        style="width: 100%; height: 0px; max-width: 100px;"
      >
        <span
          style="display: inline-block;"
        >
          <img
            alt="image"
            class="image"
            decoding="async"
            height="150"
            imagex-type="react"
            imagex-version="0.3.7"
            loading="lazy"
            src="http://bytedance.com/logo.png"
            style="border-radius: 12px; overflow: hidden; background-position: center;"
            width="100"
          />
        </span>
      </div>
    </div>
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 图片开启自适应宽度，指定一边时另一边自适应 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="container"
      style="margin-bottom: 12px;"
    >
      <div
        class="image-wrapper"
        data-testid="mdbox_image"
        style="width: 100%; height: 0px; max-width: 50px;"
      >
        <span
          style="display: inline-block;"
        >
          <img
            alt="image"
            class="image"
            decoding="async"
            height="75"
            imagex-type="react"
            imagex-version="0.3.7"
            loading="lazy"
            src="http://bytedance.com/logo.png"
            style="border-radius: 12px; overflow: hidden; background-position: center;"
            width="50"
          />
        </span>
      </div>
    </div>
    


    <div
      class="container"
      style="margin-top: 12px; margin-bottom: 12px;"
    >
      <div
        class="image-wrapper"
        data-testid="mdbox_image"
        style="width: 100%; height: 0px; max-width: 46.666666666666664px;"
      >
        <span
          style="display: inline-block;"
        >
          <img
            alt="image"
            class="image"
            decoding="async"
            height="70"
            imagex-type="react"
            imagex-version="0.3.7"
            loading="lazy"
            src="http://bytedance.com/logo.png"
            style="border-radius: 12px; overflow: hidden; background-position: center;"
            width="46.666666666666664"
          />
        </span>
      </div>
    </div>
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 图片所在段落的父节点不为根节点时（例如为块引用节点） 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第零段
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <blockquote
      class="auto-hide-last-sibling-br"
    >
      

      <div
        class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
      >
        第一段
      </div>
      <br
        class="container wrapper non-select"
      />
      

      <div
        class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
      >
        第二段第一行
        <br
          class="container wrapper non-select"
        />
        <div
          class="container"
        >
          <div
            class="image-wrapper"
            data-testid="mdbox_image"
            style="width: 100%; height: 0px; max-width: 400px;"
          >
            <span
              style="display: inline-block;"
            >
              <img
                alt="image"
                class="image"
                decoding="async"
                height="256"
                imagex-type="react"
                imagex-version="0.3.7"
                loading="lazy"
                src="http://bytedance.com/logo.png"
                style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
                width="400"
              />
            </span>
          </div>
        </div>
        <br
          class="container wrapper non-select"
        />
        第二段第二行
      </div>
      <br
        class="container wrapper non-select"
      />
      

      <div
        class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
      >
        第三段
      </div>
      <br
        class="container wrapper non-select"
      />
      

    </blockquote>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 图片未开启自适应宽度，宽高不自适应 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="container"
      style="margin-bottom: 12px;"
    >
      <div
        class="image-wrapper"
        data-testid="mdbox_image"
        style="width: 100%; height: 0px; max-width: 50px;"
      >
        <span
          style="display: inline-block;"
        >
          <img
            alt="image"
            class="image"
            decoding="async"
            height="256"
            imagex-type="react"
            imagex-version="0.3.7"
            loading="lazy"
            src="http://bytedance.com/logo.png"
            style="border-radius: 12px; overflow: hidden; background-position: center;"
            width="50"
          />
        </span>
      </div>
    </div>
    


    <div
      class="container"
      style="margin-top: 12px; margin-bottom: 12px;"
    >
      <div
        class="image-wrapper"
        data-testid="mdbox_image"
        style="width: 100%; height: 0px; max-width: 400px;"
      >
        <span
          style="display: inline-block;"
        >
          <img
            alt="image"
            class="image"
            decoding="async"
            height="70"
            imagex-type="react"
            imagex-version="0.3.7"
            loading="lazy"
            src="http://bytedance.com/logo.png"
            style="border-radius: 12px; overflow: hidden; background-position: center;"
            width="400"
          />
        </span>
      </div>
    </div>
    


    <div
      class="container"
      style="margin-top: 12px; margin-bottom: 12px;"
    >
      <div
        class="image-wrapper"
        data-testid="mdbox_image"
        style="width: 100%; height: 0px; max-width: 50px;"
      >
        <span
          style="display: inline-block;"
        >
          <img
            alt="image"
            class="image"
            decoding="async"
            height="70"
            imagex-type="react"
            imagex-version="0.3.7"
            loading="lazy"
            src="http://bytedance.com/logo.png"
            style="border-radius: 12px; overflow: hidden; background-position: center;"
            width="50"
          />
        </span>
      </div>
    </div>
    


    <div
      class="container"
      style="margin-top: 12px; margin-bottom: 12px;"
    >
      <div
        class="image-wrapper"
        data-testid="mdbox_image"
        style="width: 100%; height: 0px; max-width: 400px;"
      >
        <span
          style="display: inline-block;"
        >
          <img
            alt="image"
            class="image"
            decoding="async"
            height="256"
            imagex-type="react"
            imagex-version="0.3.7"
            loading="lazy"
            src="http://bytedance.com/logo.png"
            style="border-radius: 12px; overflow: hidden; background-position: center;"
            width="400"
          />
        </span>
      </div>
    </div>
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 基础语法 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      这是图片
      <div
        class="container"
        style="margin-top: 12px;"
      >
        <div
          class="image-wrapper"
          data-testid="mdbox_image"
          style="width: 100%; height: 0px; max-width: 400px;"
        >
          <span
            style="display: inline-block;"
          >
            <img
              alt="image"
              class="image"
              decoding="async"
              height="256"
              imagex-type="react"
              imagex-version="0.3.7"
              loading="lazy"
              src="https://bytedance.com/logo.png"
              style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
              width="400"
            />
          </span>
        </div>
      </div>
      <br
        class="container wrapper non-select"
      />
      这是带标题的图片
      <div
        class="container"
        style="margin-top: 12px;"
      >
        <div
          class="image-wrapper"
          data-testid="mdbox_image"
          style="width: 100%; height: 0px; max-width: 400px;"
        >
          <span
            style="display: inline-block;"
          >
            <img
              alt="image"
              class="image"
              decoding="async"
              height="256"
              imagex-type="react"
              imagex-version="0.3.7"
              loading="lazy"
              src="https://bytedance.com/logo.png"
              style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
              title="bytedance title"
              width="400"
            />
          </span>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 支持自动转换http为https 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <div
        class="container"
      >
        <div
          class="image-wrapper"
          data-testid="mdbox_image"
          style="width: 100%; height: 0px; max-width: 400px;"
        >
          <span
            style="display: inline-block;"
          >
            <img
              alt="image"
              class="image"
              decoding="async"
              height="256"
              imagex-type="react"
              imagex-version="0.3.7"
              loading="lazy"
              src="https://bytedance.com/logo.png"
              style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
              width="400"
            />
          </span>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`图片渲染测试 自定义渲染 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <img
        class="custom-image"
        src="http://bytedance.com/logo.png"
      />
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;
